# yacdb

./: .gitignore  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  core_8c.html  core_8c__incl.map  core_8c__incl.md5  core_8h.html  core_8h.js  core_8h__dep__incl.map  core_8h__dep__incl.md5  core_8h__incl.map  core_8h__incl.md5  core_8h_source.html  cursor_8h.html  cursor_8h.js  cursor_8h__dep__incl.map  cursor_8h__dep__incl.md5  cursor_8h__incl.map  cursor_8h__incl.md5  cursor_8h_source.html  cursor__bt_8h_source.html  custom.css  db__ops_8h.html  db__ops_8h.js  db__ops_8h__dep__incl.map  db__ops_8h__dep__incl.md5  db__ops_8h__incl.map  db__ops_8h__incl.md5  db__ops_8h_source.html  db__structs_8h.html  db__structs_8h.js  db__structs_8h__dep__incl.map  db__structs_8h__dep__incl.md5  db__structs_8h__incl.map  db__structs_8h__incl.md5  db__structs_8h_source.html  deprecated.html  (+285 more)
server-side/: CMakeLists.txt  Doxyfile  build.sh  clean.sh  console  doxy_home.md  main.c  server  server.c  setup.sh
server-side/core/: core.c
server-side/core/include/: core.h
server-side/diskio/: Makefile  dbfio.c  disckiod.c  diskio.c  fileSpecification.md
server-side/diskio/include/: db_structs.h  diskio.h  diskiod.h
server-side/diskio/test/: .gitignore  Makefile  test.c
server-side/parser/: parser.c  parser_dump.c  parser_mallocs_frees.c
server-side/parser/include/: instruction.h  main_parser.h  parser.h  parser_dump.h  parser_mallocs_frees.h
server-side/schema/: Makefile  cursor.c  cursor_bt.c  db_ops.c  record.c
server-side/schema/include/: cursor.h  (+3 more)
(+127 files in other folders)
